# pseL4_sys

./: CMakeLists.txt  README.md  easy-settings.cmake  init-build.sh  settings.cmake
apps/: CMakeLists.txt
apps/init/: CMakeLists.txt
apps/init/src/: main.c
apps/libc/: CMakeLists.txt
apps/libc/src/: syscall.c
apps/psel4muslcsys/: CMakeLists.txt
apps/sh/: CMakeLists.txt
apps/sh/src/: main.c
core/: CMakeLists.txt
core/include/: ktaskLib.h  psel4_lib.h  serviceLib.h
core/src/: init.c  main.c  psel4_lib.c
core/src/driver/: ltimer.c
core/src/lib/: serviceLib.c
core/src/serivce/: net.c  proc.c  vfs.c
core/src/util/: ktaskLib.c  serviceLib.c
src/: main.c
vbus/: CMakeLists.txt
vbus/src/: vbus.c
